test/parser/error_recovery_semi.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn error1() -> void {
    // CHECK: [[# @LINE + 1 ]]:17: error: expected expression
    let x: i32 =;

    let y: i32 = 1 + 2;
    
    // CHECK: [[# @LINE + 1 ]]:18: error: expected expression
    let z: void =;
}

// CHECK: FunctionDecl error1 -> Void void
// CHECK-NEXT:   Block
// CHECK-NEXT:    DeclStmt
// CHECK-NEXT:      VarDecl:Int i32 y
// CHECK-NEXT:        BinaryOperator '+'
// CHECK-NEXT:          IntLiteral '1'
// CHECK-NEXT:          IntLiteral '2'
